--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ html, body {
     }
 }
 
+.App {
+  text-align: center;
+  background-color: #000639;
+  height: 100vh;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-around;
+}
+
 .title {
   display: flex;
   font-size: 24px;
@@ -23,37 +32,8 @@ html, body {
   font-size: 16px;
 }
 
-.flex-start {
-  justify-content: flex-start;
-}
-
-.flex-grow {
-  flex-grow: 2;
-}
-
-.App {
-  text-align: center;
-  background-color: #000639;
-  height: 100vh;
-  flex-direction: column;
-  display: flex;
-  justify-content: space-around;
-}
-
-.line {
-  color: green;
-}
-
-.invalid {
+.msg-error {
   color: #C23628;
-}
-
-.flex {
-  display:flex;
-}
-
-.flex-shrink {
-  flex-shrink: 1.5;
 }
 
 .btn-purple {
@@ -65,4 +45,16 @@ html, body {
   color: #FFFFFF;
   text-decoration: underline;
   font-size: 12px;
+}
+
+.flex {
+  display:flex;
+}
+
+.flex-start {
+  justify-content: flex-start;
+}
+
+.flex-grow {
+  flex-grow: 2;
 }
